modify file config ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
             docker push manhdl/reverseproxy
             docker push manhdl/udagram-frontend
 
-workflow:
+workflows:
   default:
     jobs:
       - lint-app
