--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
             echo "----- The images is buiding -----"
             docker build -t manhdl/udagram-api-user ./udagram-api-user
             docker build -t manhdl/udagram-api-feed ./udagram-api-feed
-            docker build -t manhdl/reverseproxy ./reverseproxy
+            docker build -t manhdl/reverseproxy ./udagram-reverseproxy
             docker build -t manhdl/udagram-frontend ./udagram-frontend
 
             echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
